Friday Sep 30 15:12:43 2005  William Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
        * DAnCE/spec_RepositoryManager/spec_RepositoryManager.mpc
        * RACE/Planner_Manager/Component/Planner_Manager.mpc
        * tests/IDL3/ImpliedIDL/All/all.mpc
        * tools/Config_Handlers/RT-CCM/CIAOServerResources.cpp
        * tools/Config_Handlers/RT-CCM/CIAOServerResources.hpp

        Fixes for compile problems in Borland6
        
Fri Sep 30 15:11:47 2005  Gan Deng  <dengg@dre.vanderbilt.edu>

	* NEWS

	  Updated the NEWS file.

Fri Sep 30 07:53:47 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* tools/Config_Handlers/RT-CCM/SRD_Handler.cpp

	Should have been part of the previous commit. 

Thu Sep 29 18:11:25 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
	* DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp
	* ciao/Container_Impl.cpp
	* ciao/NodeApplication_Impl.cpp
	* ciao/Upgradeable_Context_Impl_T.cpp

	Fuzz errors. 
	
	* DAnCE/DomainApplicationManager/DomainApplicationManager.mpc
	* tools/Config_Handlers/RT-CCM/Config_Handlers_Export.h
	* tools/Config_Handlers/RT-CCM/SRD_Handler.h
	* tools/Config_Handlers/Utils/Config_Handlers_Export.h

	Correction for a emulated exception error. 
	
Thu Sep 29 13:01:23 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* ciao/Version.h

	Corrected the version number. 
	
Thu Sep 29 11:34:55 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* ciao/Swapping_Servant_Home_Impl_T.cpp

	Fixed build problem on non-exception systems.

Thu Sep 29 07:28:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Utils/XML_Schema_Resolver.cpp:
          Fixed not used argument warning

Thu Sep 29 06:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/Utils/XML_Schema_Resolver.h:
          Added missing pre.h
